...
      ),
      child: Scaffold(
        backgroundColor: Colors.transparent,
        appBar: MyAppBar(
          actions: [
            IconButton(
              key: const Key('filter_generation'),
              iconSize: 25,
              color: const Color.fromRGBO(23, 23, 27, 1),
              icon: const Icon(CustomIcons.generation),
              onPressed: () {
                showModalBottomSheet(
                  context: context,
                  isScrollControlled: true,
                  backgroundColor: Colors.transparent,
                  builder: (context) => MyBottomMenuScrollableSheet(
                    children: [
                      const Text(
                        'Generations',
                        style: TextStyle(
                          fontSize: 26,
                          color: Color.fromRGBO(23, 23, 27, 1),
                          fontWeight: FontWeight.w700,
                        ),
                      ),
...
                            generationName: 'Generation I',
                            selected: _generationId == 1,
                            generationId: 1,
                            onTap: () => changeGeneration(1),
                          ),
                          MyButtonGeneration(
                            generationName: 'Generation II',
                            selected: _generationId == 2,
                            generationId: 2,
                            onTap: () => changeGeneration(2),
                          ),
                          MyButtonGeneration(
                            generationName: 'Generation III',
...
                    ],
                  ),
                );
              },
            ),
            IconButton(
              key: const Key('filter_sort'),
              iconSize: 25,
              color: const Color.fromRGBO(23, 23, 27, 1),
              icon: const Icon(CustomIcons.sort),
              onPressed: () {
                showModalBottomSheet(
                  context: context,
                  isScrollControlled: true,
                  backgroundColor: Colors.transparent,
                  builder: (context) => MyBottomMenuScrollableSheet(
                    children: [
                      const Text(
                        'Sort',
                        style: TextStyle(
                          fontSize: 26,
                          color: Color.fromRGBO(23, 23, 27, 1),
                          fontWeight: FontWeight.w700,
                        ),
                      ),
...
                        ),
                      ),
                      const SizedBox(
                        height: 35,
                      ),
                      MyButton(
                        text: 'Smallest number first',
                        theme: _orderBy == OrderBy.id &&
                                _orderType == OrderType.asc
                            ? MyButtonTheme.primary
                            : MyButtonTheme.secondary,
                        onTap: () {
                          setState(() {
...
                    ],
                  ),
                );
              },
            ),
            IconButton(
              key: const Key('filter_button'),
              iconSize: 25,
              color: const Color.fromRGBO(23, 23, 27, 1),
              icon: const Icon(CustomIcons.filter),
              onPressed: () {
                showModalBottomSheet(
                  context: context,
                  isScrollControlled: true,
                  backgroundColor: Colors.transparent,
                  builder: (context) => const MyBottomMenuScrollableSheet(
                    children: [
                      Text(
                        'Filters',
                        style: TextStyle(
                          fontSize: 26,
                          color: Color.fromRGBO(23, 23, 27, 1),
                          fontWeight: FontWeight.w700,
                        ),
                      ),
...
                child: Column(
                  mainAxisAlignment: MainAxisAlignment.start,
                  crossAxisAlignment: CrossAxisAlignment.start,
                  children: [
                    const Text(
                      key: Key('title'),
                      'Pokédex',
                      style: TextStyle(
                          fontSize: 32,
                          fontWeight: FontWeight.w700,
                          color: Color.fromRGBO(23, 23, 27, 1)),
                    ),
                    const SizedBox(
...
